--- a/Client/bower.json
+++ b/Client/bower.json
@@ -2,19 +2,20 @@
   "name": "angular-js",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
-    "bootstrap": "^3.2.0",
-    "angular-animate": "^1.4.0",
-    "angular-aria": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "angular-messages": "^1.4.0",
-    "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "jquery": "*",
+    "angular": "*",
+    "bootstrap": "*",
+    "angular-animate": "*",
+    "angular-aria": "*",
+    "angular-cookies": "*",
+    "angular-messages": "*",
+    "angular-resource": "*",
+    "angular-route": "*",
+    "angular-sanitize": "*",
+    "angular-touch": "*"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "*"
   },
   "appPath": "app",
   "moduleName": "angularJsApp",
