add inject js file

--- a/Client/bower.json
+++ b/Client/bower.json
@@ -18,7 +18,7 @@
     "angular-mocks": "*"
   },
   "appPath": "app",
-  "moduleName": "angularJsApp",
+  "moduleName": "clinicApp",
   "overrides": {
     "bootstrap": {
       "main": [
