--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-include-source": "^1.1.0",
+    "grunt-injector": "^1.1.0",
     "grunt-jscs": "^1.8.0",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
@@ -25,9 +27,10 @@
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "html-injector": "^4.0.2",
     "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.0.0",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
