--- a/Client/bower.json
+++ b/Client/bower.json
@@ -24,7 +24,7 @@
       "main": [
         "less/bootstrap.less",
         "dist/css/bootstrap.css",
-        "dist/js/bootstrap.js"
+        "dist/js/bootstrap.bundle.min.js"
       ]
     }
   }
