done UI of report page

--- a/Client/bower.json
+++ b/Client/bower.json
@@ -2,6 +2,7 @@
   "name": "angular-js",
   "version": "0.0.0",
   "dependencies": {
+    "plotly": "*",
     "jquery": "*",
     "angular": "*",
     "bootstrap": "*",
